# kata-containers

./: .travis.yml  versions.yaml
src/agent/: Cargo.toml
src/agent/protocols/: Cargo.toml
src/agent/protocols/protos/: agent.proto
src/agent/protocols/src/: agent.rs  agent_ttrpc.rs
src/agent/rustjail/: Cargo.toml
src/agent/rustjail/src/: container.rs  mount.rs  validator.rs
src/agent/src/: config.rs  device.rs  main.rs  metrics.rs  mount.rs  namespace.rs  rpc.rs  sandbox.rs  signal.rs
src/kata-monitor/: Makefile  go.mod  go.sum
src/kata-monitor/cli/kata-monitor/: main.go
src/kata-monitor/pkg/kata-monitor/: cri.go  metrics.go  (+3 more)
src/runtime/: .gitignore  Makefile  go.mod  go.sum
src/runtime/cli/: factory.go  factory_test.go  kata-check.go  kata-check_test.go  kata-env.go  kata-env_test.go  kata-exec.go  main.go  main_test.go
src/runtime/containerd-shim-v2/: cloudevents.go  create.go  metrics.go  service.go  shim_management.go  shim_metrics.go  utils.go  utils_test.go
src/runtime/virtcontainers/: agent.go  api.go  api_test.go  clh.go  container.go  example_pod_run_test.go  fc.go  hypervisor.go  implementation.go  interfaces.go  kata_agent.go  kata_agent_test.go  mock_agent.go  network.go  noop_agent.go  noop_agent_test.go  persist.go  proxy.go  proxy_test.go  qemu.go  qemu_arch_base.go  sandbox.go  sandbox_metrics.go  tracing.go  vm.go  vm_test.go
src/trace-forwarder/src/: handler.rs
tools/osbuilder/rootfs-builder/: rootfs.sh
tools/packaging/kernel/: README.md  build-kernel.sh
tools/regcred/: .gitignore  README.md  go.mod  go.sum  main.go
(+37 files in other folders)
