[package]
name = "protocols"
version = "0.1.0"
authors = ["The Kata Containers community <kata-dev@lists.katacontainers.io>"]
edition = "2018"

[dependencies]
ttrpc = { git = "https://github.com/liubin/ttrpc-rust", branch = "add-metadata-for-ttrpc-context"}
protobuf = "=2.14.0"
futures = "0.1.27"

[build-dependencies]
ttrpc-codegen = "0.1.2"
